authController and userController implemented
